--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 #Show Your Support
 
-buy_me_a_coffee: # @RebeccaCrecelius
+buy_me_a_coffee: [@RebeccaCrecelius](https://www.buymeacoffee.com/rebeccacrecelius)
 
