--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,2 @@
-#Show Your Support
-
-buy_me_a_coffee: [@RebeccaCrecelius](https://www.buymeacoffee.com/rebeccacrecelius)
+buy_me_a_coffee: https://www.buymeacoffee.com/rebeccacrecelius
 
